# codex-gui

./: .gitignore  AGENTS.md
docs/: index.md
gui_pyside6/: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  __init__.py  main.py  pyproject.toml  requirements.uv.in  run_pyside6.bat  run_pyside6.sh
gui_pyside6/backend/: agent_loader.py  agent_manager.py  backend_installer.py  backend_requirements.json  codex_adapter.py  model_manager.py  provider_loader.py  settings_manager.py  tool_runner.py
gui_pyside6/docs/: index.md
gui_pyside6/plugins/: agent_logger.py  loader.py  manifest.json  syntax_formatter.py  tts_player.py
gui_pyside6/resources/: providers.json
gui_pyside6/resources/agents/: devops_buddy.json  python_expert.json  refactor_pro.json
gui_pyside6/tests/: test_cli.py  test_codex_cmd.py  test_settings_dialog.py
gui_pyside6/ui/: __init__.py  agent_editor_dialog.py  api_key_dialog.py  api_keys_dialog.py  debug_console.py  main_window.py  plugin_manager_dialog.py  provider_manager_dialog.py  sessions_dialog.py  settings_dialog.py  tools_panel.py
gui_pyside6/utils/: __init__.py  api_key.py  codex_cmd.py  file_scanner.py  highlighter.py  project_paths.py  sessions.py
