[project]
name = "codex-gui"
version = "0.1.0"
description = "PySide6 GUI for OpenAI's Codex CLI"
authors = [{ name = "Shteryan Nikolaev" }]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["gui_pyside6"]

[project.optional-dependencies]
dev = ["uv", "black", "ruff"]
